--- a/bf/bf.vcxproj
+++ b/bf/bf.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bubble.cpp" />
     <ClCompile Include="EnemyBird.cpp" />
     <ClCompile Include="Fish.cpp" />
     <ClCompile Include="GameMain.cpp" />
@@ -151,7 +152,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractScene.h" />
-    <ClInclude Include="enemybird.h" />
+    <ClInclude Include="Bubble.h" />
+    <ClInclude Include="Enemybird.h" />
     <ClInclude Include="Fish.h" />
     <ClInclude Include="FPS.h" />
     <ClInclude Include="GameMain.h" />
