--- a/bf/bf.vcxproj
+++ b/bf/bf.vcxproj
@@ -151,7 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractScene.h" />
-    <ClInclude Include="enemybird.h" />
+    <ClInclude Include="EnemyBird.h" />
     <ClInclude Include="Fish.h" />
     <ClInclude Include="FPS.h" />
     <ClInclude Include="GameMain.h" />
