--- a/bf/bf.vcxproj.filters
+++ b/bf/bf.vcxproj.filters
@@ -65,7 +65,7 @@
     <ClInclude Include="Fish.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="enemybird.h">
+    <ClInclude Include="EnemyBird.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Thunder.h">
