--- a/bf/bf.vcxproj.filters
+++ b/bf/bf.vcxproj.filters
@@ -81,4 +81,7 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
 </Project>
