--- a/bf/bf.vcxproj
+++ b/bf/bf.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="Stage1.cpp" />
     <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="Thunder.cpp" />
   </ItemGroup>
@@ -162,6 +163,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Stage.h" />
+    <ClInclude Include="Stage1.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="Thunder.h" />
   </ItemGroup>
