--- a/bf/bf.vcxproj
+++ b/bf/bf.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BoxCollider.cpp" />
     <ClCompile Include="Bubble.cpp" />
     <ClCompile Include="EnemyBird.cpp" />
     <ClCompile Include="Fish.cpp" />
@@ -149,11 +150,13 @@
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="Stage1.cpp" />
+    <ClCompile Include="testPlayer.cpp" />
     <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="Thunder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractScene.h" />
+    <ClInclude Include="BoxCollider.h" />
     <ClInclude Include="Bubble.h" />
     <ClInclude Include="EnemyBird.h" />
     <ClInclude Include="Fish.h" />
@@ -164,6 +167,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Stage.h" />
     <ClInclude Include="Stage1.h" />
+    <ClInclude Include="testPlayer.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="Thunder.h" />
   </ItemGroup>
